# Forensic-report

./: .gitignore  Dockerfile  README.md  bitbucket-pipelines.yml  main.py  pyproject.toml  requirements.txt  test_import_prompts.py  test_report.md  test_report_update.md
examples/: parse_text_example.py
nginx/: nginx.conf
scripts/: import_prompts.py  run_batch_inference.py
src/: main.py
src/admin/: admin_routes.py  dashboard_service.py
src/api/: dependencies.py
src/api/endpoints/: admin.py  case_add.py  cases.py  health.py  login.py  predictions.py  prompts.py  reports.py
src/api/schemas/: base.py  health.py  prediction.py
src/controller/: gemini_case_handler.py  prompting.py
src/core/: config.py  logging_config.py  openapi.py  security.py
src/db/: session.py
src/db/models/: base.py  case.py  prediction_log.py  user.py
src/db/repositories/: base_repository.py  case_repository.py  prediction_repository.py  user_repository.py
src/inference/: exceptions.py  loader.py  pipeline.py  postprocessing.py  preprocessing.py  service.py
src/inference/models/: base_model.py  gemini_model.py
src/monitoring/: health_checks.py  logging_middleware.py  metrics.py
src/routers/: case_router.py  login_router.py  prompts_router.py  report_routes.py
src/services/: socketService.js
src/socket/: __init__.py  case_query_handler.py  handlers.py  report_handler.py  socket_manager.py
src/utils/: audit_helpers.py  file_helpers.py  parse_text.py  text_parser.py
tests/: conftest.py
tests/unit/api/: test_admin.py  (+2 more)
utils/: CRUD_utils.py  Mongodbcnnection.py
(+7 files in other folders)
